correccion arrow theme my projects

--- a/scss/componentes/main.scss
+++ b/scss/componentes/main.scss
@@ -85,7 +85,7 @@ body {
         .fa-arrow-right {
           color: $main;
           background-color: transparent;
-          transition: all 1s ease-in-out;
+          // transition: all 1s ease-in-out;
         }
 
         .mamText {
