--- a/css/styles.css
+++ b/css/styles.css
@@ -190,7 +190,6 @@ body #main .moreInfo .pContainer {
 body #main .moreInfo .pContainer .fa-arrow-right {
   color: #c17878;
   background-color: transparent;
-  transition: all 1s ease-in-out;
 }
 body #main .moreInfo .pContainer .mamText {
   font-size: 14px;
@@ -248,7 +247,7 @@ body #myProjects .previewContainer .previewLogo {
   width: 60%;
 }
 body #myProjects .previewContainer .animate-logo {
-  transform: scale(1.3);
+  transform: scale(1.2);
 }
 body #myProjects .listContainer {
   width: 50%;
@@ -292,9 +291,18 @@ body #myProjects .listContainer .listContent .mpLinks {
 body #myProjects .listContainer .listContent .mpLinks:hover .content {
   transform: translateX(0px);
 }
+body #myProjects .listContainer .listContent .mpLinks:hover .content .fa-arrow-right::after {
+  content: none;
+}
 body #myProjects .listContainer .listContent .mpLinks .content {
   transform: translateX(-15px);
   transition: 0.4s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+body #myProjects .listContainer .listContent .mpLinks .content i {
+  font-size: 18px;
 }
 body #myProjects .listContainer .listContent .mpLinksGanadera,
 body #myProjects .listContainer .listContent .mpLinksDas,
