--- a/scss/componentes/myProjects.scss
+++ b/scss/componentes/myProjects.scss
@@ -70,12 +70,23 @@ body {
           &:hover {
             .content {
               transform: translateX(0px);
+              .fa-arrow-right {
+                &::after {
+                  content: none;
+                }
+              }
             }
           }
 
           .content {
             transform: translateX(-15px);
             transition: 0.4s;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            i {
+              font-size: 18px;
+            }
           }
         }
 
@@ -90,6 +101,7 @@ body {
         .moon {
           color: $mainMoon;
           border-bottom: solid 1px $mainMoon;
+          // aca
         }
 
         .animation {
