--- a/css/styles.css
+++ b/css/styles.css
@@ -225,60 +225,65 @@ body.moon .pContainer::after {
   background-color: #c9c5c5 !important;
 }
 
-body #myProjects {
-  height: 100%;
+#myProjects {
+  height: 60%;
   display: flex;
   flex-grow: 1;
   display: none;
   z-index: 1;
 }
-body #myProjects .previewContainer {
+#myProjects .previewContainer {
   width: 50%;
   border-radius: 0px 50px 0px 0px;
-  transition: opacity 0.5s ease-in-out, background-image 0.3s ease-in-out;
+  transition: opacity 0.3s ease-in-out, background-image 0.3s ease-in-out;
   pointer-events: none;
   opacity: 0;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-body #myProjects .previewContainer .previewLogo {
+#myProjects .previewContainer .previewLogo {
   transition: transform 0.7s ease;
   width: 60%;
 }
-body #myProjects .previewContainer .animate-logo {
+#myProjects .previewContainer .animate-logo {
   transform: scale(1.2);
 }
-body #myProjects .listContainer {
+#myProjects .listContainer {
   width: 50%;
   padding-left: 40px;
   display: flex;
   flex-direction: column;
 }
-body #myProjects .listContainer .titleContainer {
+#myProjects .listContainer ::-webkit-scrollbar {
+  display: none;
+}
+#myProjects .listContainer .titleContainer {
   border-bottom: solid 2px #c17878;
   padding-bottom: 5px;
   transition: all 0.7s;
   transform: translateY(-120px);
   opacity: 0;
 }
-body #myProjects .listContainer .titleContainer .workTitle {
+#myProjects .listContainer .titleContainer .workTitle {
   font-size: 50px;
   text-transform: uppercase;
   color: #c17878;
   background-color: transparent;
 }
-body #myProjects .listContainer .titleContainer .moon {
+#myProjects .listContainer .titleContainer .moon {
   color: #c9c5c5 !important;
+  border-bottom: none;
 }
-body #myProjects .listContainer .moon {
+#myProjects .listContainer .moon {
   border-bottom: solid 2px #c9c5c5;
 }
-body #myProjects .listContainer .listContent {
+#myProjects .listContainer .listContent {
   width: 100%;
-  height: 100%;
+  overflow: hidden;
+  overflow-y: auto;
 }
-body #myProjects .listContainer .listContent .mpLinks {
+#myProjects .listContainer .listContent .mpLinks {
   width: 100%;
   height: 80px;
   display: flex;
@@ -288,46 +293,40 @@ body #myProjects .listContainer .listContent .mpLinks {
   border-bottom: solid 1px #c17878;
   opacity: 0;
 }
-body #myProjects .listContainer .listContent .mpLinks:hover .content {
+#myProjects .listContainer .listContent .mpLinks:hover .content {
   transform: translateX(0px);
 }
-body #myProjects .listContainer .listContent .mpLinks:hover .content .fa-arrow-right::after {
+#myProjects .listContainer .listContent .mpLinks:hover .content .fa-arrow-right::after {
   content: none;
 }
-body #myProjects .listContainer .listContent .mpLinks .content {
+#myProjects .listContainer .listContent .mpLinks .content {
   transform: translateX(-15px);
   transition: 0.4s;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-body #myProjects .listContainer .listContent .mpLinks .content i {
+#myProjects .listContainer .listContent .mpLinks .content i {
   font-size: 18px;
 }
-body #myProjects .listContainer .listContent .mpLinksGanadera,
-body #myProjects .listContainer .listContent .mpLinksDas,
-body #myProjects .listContainer .listContent .mpLinksDres {
+#myProjects .listContainer .listContent .mpLinksGanadera,
+#myProjects .listContainer .listContent .mpLinksDas,
+#myProjects .listContainer .listContent .mpLinksDres {
   transition: all 0.6s;
   opacity: 0;
   transform: translateY(-120px);
 }
-body #myProjects .listContainer .listContent .moon {
+#myProjects .listContainer .listContent .moon {
   color: #c9c5c5;
   border-bottom: solid 1px #c9c5c5;
 }
-body #myProjects .listContainer .listContent .animation {
+#myProjects .listContainer .listContent .animation {
   transform: translateY(0);
   opacity: 1;
 }
-body #myProjects .listContainer .animation {
+#myProjects .listContainer .animation {
   transform: translateY(0);
   opacity: 1;
-}
-body .displayBlock {
-  display: flex !important;
-}
-body .moon .workTitle {
-  color: #c9c5c5 !important;
 }
 
 body {
