--- a/scss/componentes/myProjects.scss
+++ b/scss/componentes/myProjects.scss
@@ -1,113 +1,117 @@
-body {
-  #myProjects {
-    height: 100%;
-    display: flex;
-    flex-grow: 1;
-    display: none;
-    z-index: 1;
-    .previewContainer {
-      width: 50%;
-      border-radius: 0px 50px 0px 0px;
-      transition: opacity 0.5s ease-in-out, background-image 0.3s ease-in-out;
-      pointer-events: none;
-      opacity: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      .previewLogo {
-        transition: transform 0.7s ease;
-        width: 60%;
-      }
+#myProjects {
+  height: 60%;
+  display: flex;
+  flex-grow: 1;
+  display: none;
+  z-index: 1;
+  // border: solid 10px green;
 
-      .animate-logo {
-        transform: scale(1.2);
-      }
+  .previewContainer {
+    width: 50%;
+    border-radius: 0px 50px 0px 0px;
+    transition: opacity 0.3s ease-in-out, background-image 0.3s ease-in-out;
+    pointer-events: none;
+    opacity: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .previewLogo {
+      transition: transform 0.7s ease;
+      width: 60%;
     }
 
-    .listContainer {
-      width: 50%;
-      padding-left: 40px;
-      display: flex;
-      flex-direction: column;
+    .animate-logo {
+      transform: scale(1.2);
+    }
+  }
 
-      .titleContainer {
-        border-bottom: solid 2px $main;
-        padding-bottom: 5px;
-        transition: all 0.7s;
-        transform: translateY(-120px);
-        opacity: 0;
+  .listContainer {
+    width: 50%;
+    padding-left: 40px;
+    display: flex;
+    flex-direction: column;
+    ::-webkit-scrollbar {
+      display: none;
+    }
 
-        .workTitle {
-          font-size: 50px;
-          text-transform: uppercase;
-          color: $main;
-          background-color: transparent;
-        }
+    .titleContainer {
+      border-bottom: solid 2px $main;
+      padding-bottom: 5px;
+      transition: all 0.7s;
+      transform: translateY(-120px);
+      opacity: 0;
 
-        .moon {
-          color: $mainMoon !important;
-        }
+      .workTitle {
+        font-size: 50px;
+        text-transform: uppercase;
+        color: $main;
+        background-color: transparent;
       }
 
       .moon {
-        border-bottom: solid 2px $mainMoon;
+        color: $mainMoon !important;
+        border-bottom: none;
       }
+    }
 
-      .listContent {
+    .moon {
+      border-bottom: solid 2px $mainMoon;
+    }
+
+    .listContent {
+      width: 100%;
+      // height: 100%;
+      // flex: 1;
+      // border: solid 4px pink;
+      overflow: hidden;
+      overflow-y: auto;
+      .mpLinks {
         width: 100%;
-        height: 100%;
+        height: 80px;
+        display: flex;
+        align-items: center;
+        overflow: hidden;
+        color: $main;
+        border-bottom: solid 1px $main;
+        opacity: 0;
 
-        .mpLinks {
-          width: 100%;
-          height: 80px;
-          display: flex;
-          align-items: center;
-          overflow: hidden;
-          color: $main;
-          border-bottom: solid 1px $main;
-          opacity: 0;
+        &:hover {
+          .content {
+            transform: translateX(0px);
 
-          &:hover {
-            .content {
-              transform: translateX(0px);
-              .fa-arrow-right {
-                &::after {
-                  content: none;
-                }
+            .fa-arrow-right {
+              &::after {
+                content: none;
               }
             }
           }
+        }
 
-          .content {
-            transform: translateX(-15px);
-            transition: 0.4s;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            i {
-              font-size: 18px;
-            }
+        .content {
+          transform: translateX(-15px);
+          transition: 0.4s;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+
+          i {
+            font-size: 18px;
           }
         }
+      }
 
-        .mpLinksGanadera,
-        .mpLinksDas,
-        .mpLinksDres {
-          transition: all 0.6s;
-          opacity: 0;
-          transform: translateY(-120px);
-        }
+      .mpLinksGanadera,
+      .mpLinksDas,
+      .mpLinksDres {
+        transition: all 0.6s;
+        opacity: 0;
+        transform: translateY(-120px);
+      }
 
-        .moon {
-          color: $mainMoon;
-          border-bottom: solid 1px $mainMoon;
-          // aca
-        }
-
-        .animation {
-          transform: translateY(0);
-          opacity: 1;
-        }
+      .moon {
+        color: $mainMoon;
+        border-bottom: solid 1px $mainMoon;
       }
 
       .animation {
@@ -115,13 +119,10 @@ body {
         opacity: 1;
       }
     }
-  }
 
-  .displayBlock {
-    display: flex !important;
-  }
-
-  .moon .workTitle {
-    color: $mainMoon !important;
+    .animation {
+      transform: translateY(0);
+      opacity: 1;
+    }
   }
 }
